--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "dependencies": {
         "@react-navigation/native": "^6.0.13",
         "@react-navigation/native-stack": "^6.9.0",
+        "axios": "^1.1.2",
         "expo": "~46.0.9",
         "expo-image-picker": "^13.3.1",
         "expo-status-bar": "~1.4.0",
         "firebase": "^9.2.0",
         "react": "18.0.0",
-        "react-native": "0.69.6"
+        "react-native": "0.69.6",
+        "react-native-document-picker": "^8.1.1",
+        "react-native-image-picker": "^4.10.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9"
